# coffee-house-backend

./: .coverage  .dockerignore  .gitignore  Dockerfile  main.py  models.py  pyproject.toml
.github/workflows/: main.yml
db/: core.py  items.py  session.py
src/: api.py  exceptions.py  logging.py  main.py
src/db/: core.py  items.py
src/entities/: order.py
src/order/: controller.py  model.py  service.py
tests/: test_order_service.py
tests/e2e/: test_orders_endpoint.py
