[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Erick Okal <bobbydasilva98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
prometheus-fastapi-instrumentator = "^7.1.0"
python-json-logger = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
